--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-* {
+ * {
     box-sizing: border-box;
 }
 
@@ -7,7 +7,7 @@
     display: flex;
         flex-direction: row;
         justify-content: center;
-}
+} 
 
 .form-container {
     margin: auto;
@@ -40,7 +40,6 @@
         font-size: 17px;
         border: 1px solid grey;
         border-left: none;
-        /* Prevent double borders */
         cursor: pointer;
 }
 
@@ -55,7 +54,6 @@
 }
 
 .load-more {
-    /* display: none; */
     position: absolute;
     position: fixed;
     bottom: 0;
@@ -75,7 +73,7 @@
     display: block;
 }
 
-.gallery {
+/*.gallery {
     margin:auto;
     margin-top: 1%;
         max-width: 80%;
@@ -115,8 +113,53 @@ display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
-/* width: calc((100% - 6 * 15px) / 4); */
 }
 .info-item:not(:last-child) {
     margin-right: 7px;
+} */
+
+
+
+ :root {
+    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    --animation-duration: 250ms;
 }
+
+.gallery {
+    margin-top: 1%;
+    display: grid;
+    max-width: 1140px;
+    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    grid-auto-rows: 240px;
+    grid-gap: 12px;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.gallery__item {
+    position: relative;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
+        0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+}
+
+.gallery__image:hover {
+    transform: scale(1.03);
+}
+
+.gallery__image {
+    height: 200px;
+    width: 100%;
+    object-fit: cover;
+    transition: transform var(--animation-duration) var(--timing-function);
+}
+
+.gallery__link {
+    display: block;
+    text-decoration: none;
+    height: 100%;
+}
+
+.gallery__link:hover {
+    cursor: zoom-in;
+} 
