--- a/src/styles.css
+++ b/src/styles.css
@@ -103,10 +103,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-   
- 
-
-}
+    }
 
 .info-item {
 display: flex;
@@ -125,11 +122,15 @@ align-items: center;
     --animation-duration: 250ms;
 }
 
+
+
 .gallery {
+    justify-content: center;
+    flex-wrap: wrap;
     margin-top: 1%;
     display: grid;
-    max-width: 1140px;
-    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+    max-width: 80%;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-rows: 240px;
     grid-gap: 12px;
     justify-content: center;
@@ -138,6 +139,8 @@ align-items: center;
 }
 
 .gallery__item {
+    width: calc((80% - 6 * 15px) / 4);
+    display: flex;
     position: relative;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
         0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
@@ -148,7 +151,7 @@ align-items: center;
 }
 
 .gallery__image {
-    height: 200px;
+    height: 180px;
     width: 100%;
     object-fit: cover;
     transition: transform var(--animation-duration) var(--timing-function);
@@ -163,3 +166,23 @@ align-items: center;
 .gallery__link:hover {
     cursor: zoom-in;
 } 
+
+.info {
+    max-width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: baseline;
+    text-decoration: none;
+}
+
+.info-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.info-item:not(:last-child) {
+    margin-right: 7px;
+}
