--- a/src/styles.css
+++ b/src/styles.css
@@ -130,7 +130,7 @@ align-items: center;
     margin-top: 1%;
     display: grid;
     max-width: 80%;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
     grid-auto-rows: 240px;
     grid-gap: 12px;
     justify-content: center;
@@ -141,6 +141,7 @@ align-items: center;
 .gallery__item {
     width: calc((80% - 6 * 15px) / 4);
     display: flex;
+    
     position: relative;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
         0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
@@ -177,12 +178,12 @@ align-items: center;
 }
 
 .info-item {
-    display: flex;
+    display: block;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .info-item:not(:last-child) {
-    margin-right: 7px;
+        margin-right: 1%;
 }
