--- a/src/styles.css
+++ b/src/styles.css
@@ -141,7 +141,6 @@ align-items: center;
 .gallery__item {
     width: calc((80% - 6 * 15px) / 4);
     display: flex;
-    
     position: relative;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
         0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
@@ -178,12 +177,12 @@ align-items: center;
 }
 
 .info-item {
-    display: block;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .info-item:not(:last-child) {
-        margin-right: 1%;
+    margin-right: 1%;
 }
