--- a/src/styles.css
+++ b/src/styles.css
@@ -130,7 +130,7 @@ align-items: center;
     margin-top: 1%;
     display: grid;
     max-width: 80%;
-    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-rows: 240px;
     grid-gap: 12px;
     justify-content: center;
@@ -139,7 +139,7 @@ align-items: center;
 }
 
 .gallery__item {
-    width: calc((80% - 6 * 15px) / 4);
+    text-decoration: none;
     display: flex;
     position: relative;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
@@ -188,8 +188,7 @@ align-items: center;
 }
 
 .info-item b {
-    text-decoration: none;
-    pointer-events: none;
     font-size: 13px;
+    color: black;
 
 }
