--- a/src/styles.css
+++ b/src/styles.css
@@ -54,6 +54,8 @@
 }
 
 .load-more {
+    width: 100;
+    height: 30;
     position: absolute;
     position: fixed;
     bottom: 0;
@@ -130,7 +132,7 @@ align-items: center;
     margin-top: 1%;
     display: grid;
     max-width: 80%;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(215px, 1fr));
     grid-auto-rows: 240px;
     grid-gap: 12px;
     justify-content: center;
@@ -139,7 +141,6 @@ align-items: center;
 }
 
 .gallery__item {
-    text-decoration: none;
     display: flex;
     position: relative;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
@@ -159,7 +160,6 @@ align-items: center;
 
 .gallery__link {
     display: block;
-    text-decoration: none;
     height: 100%;
 }
 
@@ -173,7 +173,6 @@ align-items: center;
     flex-direction: row;
     justify-content: center;
     align-items: baseline;
-    text-decoration: none;
 }
 
 .info-item {
@@ -191,4 +190,10 @@ align-items: center;
     font-size: 13px;
     color: black;
 
+}
+
+a {
+    color: #8d8176;
+    text-decoration: none ;
+    border: none ;
 }
