--- a/src/styles.css
+++ b/src/styles.css
@@ -194,6 +194,6 @@ align-items: center;
 
 a {
     color: #8d8176;
-    text-decoration: none ;
-    border: none ;
+    text-decoration: none !important;
+    border: none !important;
 }
